--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ avatar: https://avatars3.githubusercontent.com/u/16680513?v=3&u=22f066335d8aabcb
 footer-links:
   dribbble:
   email: emilypmendez@gmail.com
-  facebook:
+  facebook: 
   flickr:
   github: emilypmendez
-  instagram:
-  linkedin: 
+  instagram: 
+  linkedin: emilypmendez
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: emilypmendez
