--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-91739588-1"></script>
+google_analytics: <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91739588-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
