--- a/_config.yml
+++ b/_config.yml
@@ -37,14 +37,15 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91739588-1"></script>
-<script>
+google_analytics:
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91739588-1"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-91739588-1');
-</script>
+  </script>
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
