--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Emily Mendez
 
 # Short bio or description (displayed in the header)
-description: Software Developer from Huntsville, AL, USA.
+description: Software Architect located in Huntsville, AL, USA.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/16680513?v=3&u=22f066335d8aabcb66ff4f2c0c0e243b625602b8&s=400
@@ -25,7 +25,7 @@ footer-links:
   instagram: 
   linkedin: emilypmendez
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: emilypmendez # just type anything here for a working RSS icon
   twitter: emilypmendez
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
@@ -37,14 +37,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91739588-1"></script>
-  <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-91739588-1');
-  </script>
+google_analytics: UA-91739588-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
