--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,11 @@ footer-links:
   instagram: 
   linkedin: emilypmendez
   pinterest:
-  rss: emilypmendez # just type anything here for a working RSS icon
   twitter: emilypmendez
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
+  rss: emilypmendez # just type anything here for a working RSS icon
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
@@ -59,7 +59,7 @@ permalink: /:title/
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
+kramdown: redcarpet
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
